# hermes-invest

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  hermes.env.example  pyproject.toml
docs/: architecture.md  deployment.md  hermes-deploy-next.md  hermes-integration.md  hermes-server-plan.md
sample_data/: holdings.example.csv
scripts/server/: add_swap.sh  deploy.sh
src/investment_core/: config.py  dependencies.py  main.py  mcp_payloads.py  mcp_server.py  models.py  storage.py
src/investment_core/routes/: __init__.py  analysis.py  hermes.py  holdings.py  rules.py
src/investment_core/services/: analysis.py  importer.py
tests/: test_api.py  test_import_service.py  test_mcp_payloads.py  test_portfolio_service.py
